# GuiChat

./: .gitignore  CMakeLists.txt  README.md  chat.sql  loginform.cpp  loginform.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  registrationform.cpp  registrationform.ui  startscreen.cpp  startscreen.h  startscreen.ui
client/: CMakeLists.txt  loginform.h  loginform.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  registrationform.cpp  registrationform.h  registrationform.ui  startscreen.cpp  startscreen.h  startscreen.ui
client/sources/: Test.cpp
client/translations/: client_ru.ts  my_ru.ts
libchatdb/: CMakeLists.txt
libchatdb/sources/: Database.cpp  Database.h  DbException.cpp  Message.cpp  Message.h  Parsing.cpp  Parsing.h  User.cpp  User.h
libchatsettings/: CMakeLists.txt
libchatsettings/sources/: Settings.cpp  Settings.h
server/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
server/sources/: main.cpp
server/translations/: my_ru.ts  server_ru.qm  server_ru.ts
sources/: CommandLineInterface.cpp  CommandLineInterface.h  Database.cpp  Database.h  DbException.h  Message.cpp  Message.h  Parsing.cpp  Parsing.h  Test.cpp  User.cpp  User.h  sha1.cpp  sha1.h
translations/: my_ru.qm  my_ru.ts
